--- a/Css/style.css
+++ b/Css/style.css
@@ -41,4 +41,26 @@ a {
     text-decoration: none;
     font-family: "Hanna", cursive;
     font-size: 32px;
+
+    
 }
+
+#p1 {
+    border: 1px solid blue;
+    padding: 10px 60px 10px 60px; /* 상 우 하 좌 */
+    margin: 70px 50px 50px 50px;
+    width: 500px;  /* 가로 길이 */
+
+    /* 요소를 가운데 정렬 */
+    margin-left: auto;  
+    margin-right: auto;
+  }
+
+  #p2 {
+    /* 테두리 점선 */
+    border: 2px dotted blueviolet;
+    margin: 20px;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
