--- a/login_page/login_style.css
+++ b/login_page/login_style.css
@@ -1,28 +1,28 @@
 * {
     box-sizing: border-box;
-    font-family: 'Noto Sans KR', sans-serif;
-    border: none;
+    font-family: 'Noto Sans KR', sans-serif;    
+    border-style: none;
     border-radius: 5px;
   }
   
   body {
+    margin: 0;
     background-color: #1BBC9B;
-    text-align: center;
   }
   
   .login-form {
     background-color: #EEEFF1;
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
     width: 300px;
     padding: 20px;
+    display: block;
+    margin: 50px auto auto auto;
   }
   
   .text-field {
     font-size: 14px;
     padding: 10px;
     margin-bottom: 10px;
+    color: #9b9b9b;
     width: 100%;
   }
   
@@ -30,13 +30,16 @@
     background-color: #1BBC9B;
     font-size: 14px;
     padding: 10px;
-    text-align: center;
-    margin-top: 10px;
+    margin: auto auto 20px auto;
     width: 100%;
+    color: white;
+  }
+
+  .submit-btn:hover {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.50);
   }
   
   .links {
-    margin-top: 30px;
     text-decoration: none;
   }
   
