--- a/baemin_kled/baemin.css
+++ b/baemin_kled/baemin.css
@@ -12,6 +12,12 @@ body {
     background-color: #F0E8D9;
   }
 
+/*
+i {
+    display: block;  인라인 요소를 블록으로 변경하기
+}
+*/
+
 h1 {
     text-align: center;
     font-size: 64px;
