--- a/baemin_kled/baemin.css
+++ b/baemin_kled/baemin.css
@@ -28,7 +28,7 @@ h1 {
 h2 {
     text-align: center;
     font-size: 32px;
-    color:#58595B;
+    color:.58595B;
     margin-bottom: 75px;
 }
 
@@ -50,22 +50,24 @@ p {
     color: #0000EE;
 }
 
-#photo {
+.photo {
     width: 300px;
     height: 200px;
 }
-
-#menu {
+.menu-container{
+    width: 660px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.menu {
     background-color: white;
     width: 300px;
-    margin-left: auto;
-    margin-right: auto; 
+    margin-left: 15px;
+    margin-right: 15px; 
     margin-bottom: 50px;
+    float: left;
 }
 
-#menu #info{
+.menu .info{
     padding: 20px;
 }
-
-
-
